--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         Analyse géographique visant à identifier les stations les plus avantageuses
         autour de Lyon.
       </p>
-      <a href="https://github.com/TON_USERNAME/prix-gazole-rhone" target="_blank">
+      <a href="https://github.com/florian.djafalo/prix-gazole-rhone" target="_blank">
         Voir le projet →
       </a>
     </div>
